public class PizzeriaBrest extends Pizzeria {
    public PizzeriaBrest(PizzaFactory PizzaFactory) {
        super(PizzaFactory);
    }
}