public class PizzeriaStrasbourg extends Pizzeria {
    public PizzeriaStrasbourg(PizzaFactory PizzaFactory) {
        super(PizzaFactory);
    }
}
