@startuml
''' Diagramme généré à partir des sources sur Eclipse grâce au plugin plantUml
class PizzaFactoryBrest [[java:PizzaFactoryBrest]] {
	-{static}PizzaFactoryBrest uniqueInstance
	-PizzaFactoryBrest()
	+{static}PizzaFactoryBrest getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryBrest
abstract class Pizza [[java:Pizza]] {
	#String name
	#String crust
	#String sauce
	#ArrayList<String> garnitures
	+Pizza(String style, String type)
	+void prepare()
	+void bake()
	+void cut()
	+void wrap()
	+String getName()
}
class PizzeriaFactory [[java:PizzeriaFactory]] {
	-{static}PizzeriaFactory uniqueInstance
	-PizzeriaFactory()
	+Pizzeria create(String type)
	+{static}PizzeriaFactory getInstance()
}
abstract class PizzaFactory [[java:PizzaFactory]] {
	+{abstract}Pizza create(String name)
}
abstract class Pizzeria [[java:Pizzeria]] {
	+Pizzeria(PizzaFactory pizzaFactory)
	+Pizza orderPizza(String type)
	#Pizza createPizza(String type)
}
class PizzaFactory [[java:PizzaFactory]] {
}
Pizzeria --> "1" PizzaFactory : pizzaFactory
class PizzaFactoryStrasbourg [[java:PizzaFactoryStrasbourg]] {
	-{static}PizzaFactoryStrasbourg uniqueInstance
	-PizzaFactoryStrasbourg()
	+{static}PizzaFactoryStrasbourg getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryStrasbourg
class PizzeriaBrest [[java:PizzeriaBrest]] {
	+PizzeriaBrest(PizzaFactory PizzaFactory)
}
class Pizzeria [[java:Pizzeria]] {
}
Pizzeria <|-- PizzeriaBrest
class PizzeriaStrasbourg [[java:PizzeriaStrasbourg]] {
	+PizzeriaStrasbourg(PizzaFactory PizzaFactory)
}
class Pizzeria [[java:Pizzeria]] {
}
Pizzeria <|-- PizzeriaStrasbourg
class Main [[java:Main]] {
	+{static}void main(String[] args)
	+void cookPizzas()
}
class PizzaCheeseStyleBrest [[java:PizzaCheeseStyleBrest]] {
	+PizzaCheeseStyleBrest()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaCheeseStyleBrest
class PizzaCheeseStyleStrasbourg [[java:PizzaCheeseStyleStrasbourg]] {
	+PizzaCheeseStyleStrasbourg()
	+void cut()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaCheeseStyleStrasbourg
class PizzaPoivronStyleStrasbourg [[java:PizzaPoivronStyleStrasbourg]] {
	+PizzaPoivronStyleStrasbourg()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaPoivronStyleStrasbourg
class PizzaGrecqueStyleStrasbourg [[java:PizzaGrecqueStyleStrasbourg]] {
	+PizzaGrecqueStyleStrasbourg()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaGrecqueStyleStrasbourg
class PizzaGrecqueStyleBrest [[java:PizzaGrecqueStyleBrest]] {
	+PizzaGrecqueStyleBrest()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaGrecqueStyleBrest
class PizzaPoivronStyleBrest [[java:PizzaPoivronStyleBrest]] {
	+PizzaPoivronStyleBrest()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaPoivronStyleBrest

''' Relations de dépendance ajoutées à la main car non générées avec le plugin plantUml sur Eclipse
Main ..> Pizza
Main ..> PizzeriaFactory
PizzeriaFactory ..> Pizzeria
PizzaFactory ..> Pizza
@enduml